# unitree-go1-real-robot

go1_autonomous_navigation/: CMakeLists.txt  package.xml
go1_autonomous_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
go1_autonomous_navigation/include/: go1_driver.h
go1_autonomous_navigation/launch/: walk_to_goal.launch
go1_autonomous_navigation/src/: go1_driver.cpp  go1_walk.cpp  imu_pub.cpp  odom_pub.cpp
go1_bringup/: CMakeLists.txt  bringup.launch  package.xml
go1_mapping/: CMakeLists.txt  package.xml
go1_mapping/config/: go1_map.rviz  mapper_params_online_async.yaml
go1_mapping/launch/: mapping.launch
go1_mapping/maps/: big_lab.pgm  big_lab.yaml  big_lab_serial.data  office_map.pgm  office_map.yaml  test_farm.pgm  test_farm.yaml
go1_mapping/src/: fake_tf_publisher.py  map2base_tf_publisher.py  map_to_tf_publisher.py  map_to_trunk_tf_publisher.py  odom_to_tf_publisher.py  point_cloud2_subscriber_local.py  pointcloud2_stamped.cpp
go1_robot_description/: CMakeLists.txt  package.xml
go1_robot_description/launch/: go1_state.launch  go1_state_launch.launch
go1_robot_description/urdf/: robot_simple.xml
go1_robot_description/xacro/: depthCamera.xacro  gazebo.xacro  leg.xacro  robot.xacro  robot_simple.xacro  ultraSound.xacro
go1_ros_driver/: CMakeLists.txt  package.xml
go1_ros_driver/include/: common.h
go1_ros_driver/src/: go1_driver.cpp
